tests/snapshots/examples_fixtures/Debug__IceDemo.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Debug/IceDemo.flx
== compile ==
failed (module)
== diagnostics ==
Error[E024]: Module Path Mismatch

Module name `Debug.IceDemo` doesn't match file path `examples/Debug/IceDemo.flx`.

  examples/Debug/IceDemo.flx:15:1
   |
15 | module Debug.IceDemo {
   | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
