tests/snapshots/examples_fixtures/Debug__ModuleGraphCycleB.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Debug/ModuleGraphCycleB.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Debug.ModuleGraphCycleB` doesn't match file path `//?/examples/Debug/ModuleGraphCycleB.flx`.

  examples/Debug/ModuleGraphCycleB.flx:3:1
  |
3 | module Debug.ModuleGraphCycleB {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
